添加 jmod 文件支持